# java-libkdbx

./: .gitignore  .gitmodules  README.md  build.gradle
c/: CMakeLists.txt  test.c
c/src/: crypto.c  format.c  kdbxjni.c  kdbxouter.h
java/: .gitignore  build.gradle  settings.gradle
java/src/main/java/io/github/angelsl/java/libkdbx/: Crypto.java  Database.java  Entry.java  Group.java  KDBXException.java  KDBXIRS.java
java/src/main/java/io/github/angelsl/java/libkdbx/format/: KDBXBinary.java  KDBXFile.java  KDBXIRS.java  KDBXOuter.java  Util.java
java/src/test/java/io/github/angelsl/java/libkdbx/: CryptoTest.java  TestUtil.java
java/src/test/java/io/github/angelsl/java/libkdbx/format/: KDBXFileTest.java  KDBXOuterTest.java
java/src/test/resources/: kdbx3.kdbx  kdbx3_aes_gzip.kdbx.xml.base64  kdbx3_aes_gzip_binary.kdbx  kdbx3_aes_gzip_binary.kdbx.xml.base64  kdbx3_aes_none.kdbx  kdbx3_aes_none.kdbx.xml.base64  kdbx3_chacha20_gzip.kdbx  kdbx3_chacha20_gzip.kdbx.xml.base64  kdbx3_chacha20_none.kdbx  kdbx3_chacha20_none.kdbx.xml.base64  kdbx4_aes_aeskdf_gzip.kdbx  kdbx4_aes_aeskdf_gzip.kdbx.xml.base64  kdbx4_aes_aeskdf_none.kdbx  kdbx4_aes_aeskdf_none.kdbx.xml.base64  kdbx4_aes_argon2_gzip.kdbx  kdbx4_aes_argon2_gzip.kdbx.xml.base64  kdbx4_chacha20_aeskdf_gzip.kdbx  kdbx4_chacha20_aeskdf_gzip.kdbx.xml.base64  kdbx4_chacha20_aeskdf_none.kdbx  kdbx4_chacha20_aeskdf_none.kdbx.xml.base64  kdbx4_chacha20_argon2_gzip.kdbx  kdbx4_chacha20_argon2_gzip.kdbx.xml.base64  kdbx4_chacha20_argon2_gzip_binary.kdbx  kdbx4_chacha20_argon2_gzip_binary.kdbx.xml.base64
src/main/java/angelsl/java/libkdbx/: BinaryReader.java  Crypto.java  KDBX.java  KDBXException.java  KeePassKey.java  Util.java
src/main/java/angelsl/java/libkdbx/crypto/: Crypto.java  SecureByteArray.java
src/main/java/angelsl/java/libkdbx/crypto/cipher/: AESCipher.java  ChaCha20Cipher.java  Cipher.java
src/main/java/angelsl/java/libkdbx/crypto/kdf/: AESKDF.java  Argon2KDF.java  KDF.java
src/main/java/angelsl/java/libkdbx/format/: KDBX.java  KDBXException.java  KDBXFile.java  KDBXHeader.java  KDBXKDF.java
src/test/java/angelsl/java/libkdbx/: TestUtil.java
src/test/java/angelsl/java/libkdbx/crypto/: CryptoTest.java
src/test/java/angelsl/java/libkdbx/format/: KDBXFileTest.java
src/test/java/angelsl/java/libkdbx/test/: CryptoTest.java
